tests/FSharp.Analyzers.Tests/data/string/lastindexof/negative/String StringComparison.fs
module M

open System
"foo".LastIndexOf("f",StringComparison.InvariantCulture)
